--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Demonstration of ChatGPT API in a Python Flask Application. A Skolo Online course.">
 
     <title> SQLWizard</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
@@ -64,6 +63,11 @@
                 <button id="gpt-button" class="btn btn-primary">Ask SQLWizard</button>
             </div>
         </div>
+
+        <div class="practice-button-container">
+            <a href="\practice" class="btn btn-primary">Practice SQL</a>
+        </div>
+
         <div id="loading-indicator" style="display: none;">
             <div class="spinner-border text-primary" role="status">
                 <!-- <span class="sr-only">Loading...</span> -->
@@ -112,7 +116,6 @@
                     });
                     return; // Exit the function early
                 }
-                //if question == 'practice' ==>  display hard coded databases
                 
                 //user asks question
                 addMessage(question, true);
