--- a/templates/index.html
+++ b/templates/index.html
@@ -43,14 +43,10 @@
                 <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
                         <p class="mb-0 opacity-75">Hello! I am SQLWizard, and I am here to help you on any SQL-related queries.<br>
-                             Some helpful tips for working with your friendly SQLWizard:
+                            
                             -Ask me any question you'd like, anytime!<br>
                             -Refrain from asking anything that's not SQL-related- I invested all my time learning SQL for you!<br>
-                            -I have some sample databases that we can make queries on, but if you'd like, you can enter your own database by copying and pasting it onto the prompt window! I can also make a random database for you, just let me know what kind of database you'd like to work on <br>
-                            -“Take test” is an awesome feature - you can test your SQL knowledge on a topic, and your score will be registered. You can take tests on the same topic as many times as you like, and see how well you're performing through a graph.<br>
-                            -If the questions are too hard(or too easy), just let me know! We all start somewhere.<br>
-                            -If you'd like to log off, type 'quit' in the chat. We'll continue from where we left off!<br>
-
+                            -Type 'quit' to end session
                         </p>
                     </div>
                 </div>
