removed test and practice.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <div class="practice-button-container">
-            <a href="\practice" class="btn btn-primary">Practice SQL</a>
+            <a href="\sandbox" class="btn btn-primary">Practice SQL</a>
         </div>
 
         <!-- Add a Finish Topic button and a hidden form for confidence score submission -->
